src/test/ui/borrowck/regions-escape-bound-fn-2.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/regions-escape-bound-fn-2.rs:18:27
   |
LL |     with_int(|y| x = Some(y));
   |                           ^

error: unsatisfied lifetime constraints
  --> $DIR/regions-escape-bound-fn-2.rs:18:18
   |
LL |     let mut x = None;
   |         ----- lifetime `'2` appears in the type of `x`
LL |     with_int(|y| x = Some(y));
   |               -  ^^^^^^^^^^^ free region requires that `'1` must outlive `'2`
   |               |
   |               lifetime `'1` appears in this argument

error: aborting due to previous error

